--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -220,6 +220,7 @@
     <ClInclude Include="PqaNumber.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="CETrainTaskNumberSpec.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CETask.cpp" />
