About to refactor to a macro converting exceptions to PqaError .

--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="CETrainTaskNumberSpec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CEQuiz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
