--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -198,6 +198,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CEQuiz.h" />
     <ClInclude Include="CESubtask.h" />
     <ClInclude Include="CESubtaskCompleter.h" />
     <ClInclude Include="CETask.h" />
