Added aggregate C for grand total of target weights. Changed to SIMD for update of the current target total and grand total. About to refactor CpuEngine to make use of the optimization opportunity due to engine dimensions not changed in regular mode.

--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -84,13 +84,13 @@
     <ClInclude Include="CETrainSubtaskAdd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CETrainTaskNumberSpec.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CEQuiz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ErrorHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CETrainTaskNumSpec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
