--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -221,7 +221,7 @@
     <ClInclude Include="PqaNumber.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="CETrainTaskNumberSpec.h" />
+    <ClInclude Include="CETrainTaskNumSpec.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CEQuiz.cpp" />
