--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -198,6 +198,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CECalcTargetPriorsSubtask.h" />
+    <ClInclude Include="CECalcTargetPriorsTask.h" />
+    <ClInclude Include="CECalcTargetPriorsTaskNumSpec.h" />
     <ClInclude Include="CEQuiz.h" />
     <ClInclude Include="CESubtask.h" />
     <ClInclude Include="CESubtaskCompleter.h" />
