--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="Interface\SRBitArray.h">
       <Filter>Header Files\Interface</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRMath.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
