Continued implementing CpuEngine::ResumeQuiz() : implemented a fork between StartQuiz and ResumeQuiz operations. Implemented a benchmark of caching vs. non-caching reads&writes with division in between.

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="CECalcTargetPriorsSubtask.h" />
     <ClInclude Include="CECalcTargetPriorsTask.h" />
     <ClInclude Include="CECalcTargetPriorsTaskNumSpec.h" />
+    <ClInclude Include="CECreateQuizOperation.h" />
     <ClInclude Include="CEQuiz.h" />
     <ClInclude Include="CESubtask.h" />
     <ClInclude Include="CESubtaskCompleter.h" />
