--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="CECalcTargetPriorsTaskNumSpec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CECreateQuizOperation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
