Implemented SRFastArray::Resize() . Removed add/remove single question/target methods from IPqaEngine and descendants: they would result in quadratic complexity when new underlying array is used.

--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="Interface\SRFastArray.h">
       <Filter>Header Files\Interface</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRAlignedDeleter.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
