--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="Interface\SRCast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRSimd.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
