--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="FileLogger.h" />
     <ClInclude Include="Interface\Exceptions\SRDefaultLoggerExceptions.h" />
     <ClInclude Include="Interface\Exceptions\SRFileLoggerExceptions.h" />
+    <ClInclude Include="Interface\ISRLogCustomizable.h" />
     <ClInclude Include="Interface\SRAlignedAllocator.h" />
     <ClInclude Include="Interface\SRAlignedDeleter.h" />
     <ClInclude Include="Interface\SRBitArray.h" />
@@ -230,6 +231,7 @@
     <ClInclude Include="Interface\SRThreadPool.h" />
     <ClInclude Include="Interface\SRUtils.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SubtaskCompleter.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -249,6 +251,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="FileLogger.cpp" />
+    <ClCompile Include="SRBaseSubtask.cpp" />
     <ClCompile Include="SRConditionVariable.cpp" />
     <ClCompile Include="SRCriticalSection.cpp" />
     <ClCompile Include="SRDefaultLogger.cpp" />
@@ -258,6 +261,7 @@
     <ClCompile Include="SRReaderWriterSync.cpp" />
     <ClCompile Include="SRSpinSync.cpp" />
     <ClCompile Include="SRString.cpp" />
+    <ClCompile Include="SRThreadPool.cpp" />
     <ClCompile Include="SRUtils.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
