--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -185,5 +185,8 @@
     <ClCompile Include="SRThreadPool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SRBaseTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
