--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="Interface\Exceptions\SRGenericException.h">
       <Filter>Header Files\Interface\Exceptions</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRExitCode.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -201,6 +204,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SRGenericException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SubtaskCompleter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
