Finished refactoring to usage of SRThreadPool . The build is fixed.

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -221,6 +221,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CEQuiz.cpp" />
+    <ClCompile Include="CETask.cpp" />
+    <ClCompile Include="CETrainSubtaskAdd.cpp" />
+    <ClCompile Include="CETrainSubtaskDistrib.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
