--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -195,9 +195,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseCpuEngine.fwd.h" />
+    <ClInclude Include="BaseCpuEngine.decl.h" />
+    <ClInclude Include="BaseCpuEngine.h" />
+    <ClInclude Include="BaseCpuEngine.impl.h" />
     <ClInclude Include="CECreateQuizOperation.h" />
     <ClInclude Include="CEQuiz.h" />
+    <ClInclude Include="CETask.fwd.h" />
+    <ClInclude Include="CETask.decl.h" />
     <ClInclude Include="CETask.h" />
+    <ClInclude Include="CETask.impl.h" />
     <ClInclude Include="CETrainSubtaskAdd.h" />
     <ClInclude Include="CETrainSubtaskDistrib.h" />
     <ClInclude Include="CETrainTask.h" />
@@ -220,8 +227,8 @@
     <ClInclude Include="CETrainTaskNumSpec.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseCpuEngine.cpp" />
     <ClCompile Include="CEQuiz.cpp" />
-    <ClCompile Include="CETask.cpp" />
     <ClCompile Include="CETrainSubtaskAdd.cpp" />
     <ClCompile Include="CETrainSubtaskDistrib.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
