Parallelized memory copy&fill operations in CpuEngine::CreateQuizInternal() .

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -198,6 +198,8 @@
     <ClInclude Include="BaseCpuEngine.fwd.h" />
     <ClInclude Include="BaseCpuEngine.decl.h" />
     <ClInclude Include="BaseCpuEngine.h" />
+    <ClInclude Include="CEBaseTask.decl.h" />
+    <ClInclude Include="CEBaseTask.h" />
     <ClInclude Include="CECreateQuizOperation.h" />
     <ClInclude Include="CEQuiz.h" />
     <ClInclude Include="CETask.fwd.h" />
