Refactored CETrainTask to fwd/decl/impl header design.

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -211,6 +211,8 @@
     <ClInclude Include="CETask.h" />
     <ClInclude Include="CETrainSubtaskAdd.h" />
     <ClInclude Include="CETrainSubtaskDistrib.h" />
+    <ClInclude Include="CETrainTask.decl.h" />
+    <ClInclude Include="CETrainTask.fwd.h" />
     <ClInclude Include="CETrainTask.h" />
     <ClInclude Include="CpuEngine.decl.h" />
     <ClInclude Include="CpuEngine.fwd.h" />
