--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -210,10 +210,16 @@
     <ClInclude Include="CETask.decl.h" />
     <ClInclude Include="CETask.h" />
     <ClInclude Include="CETrainSubtaskAdd.h" />
+    <ClInclude Include="CETrainSubtaskDistrib.decl.h" />
+    <ClInclude Include="CETrainSubtaskDistrib.fwd.h" />
     <ClInclude Include="CETrainSubtaskDistrib.h" />
     <ClInclude Include="CETrainTask.decl.h" />
     <ClInclude Include="CETrainTask.fwd.h" />
     <ClInclude Include="CETrainTask.h" />
+    <ClInclude Include="CEUpdatePriorsSubtaskMul.h" />
+    <ClInclude Include="CEUpdatePriorsTask.decl.h" />
+    <ClInclude Include="CEUpdatePriorsTask.fwd.h" />
+    <ClInclude Include="CEUpdatePriorsTask.h" />
     <ClInclude Include="CpuEngine.decl.h" />
     <ClInclude Include="CpuEngine.fwd.h" />
     <ClInclude Include="CpuEngine.h" />
@@ -236,8 +242,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseCpuEngine.cpp" />
+    <ClCompile Include="CECreateQuizOperation.cpp" />
     <ClCompile Include="CETrainSubtaskAdd.cpp" />
-    <ClCompile Include="CETrainSubtaskDistrib.cpp" />
+    <ClCompile Include="CEUpdatePriorsSubtaskMul.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
